# docker-in-action

./: .gitignore  README.md  docker-compose.yml  justfile
.github/workflows/: build.yml
airflow/dags/: dag.py
api/: Dockerfile  app.py  pyproject.toml  requirements.txt
api/tests/: test_app.py
etl/: Dockerfile  dataset_description.md  dataset_exploration.ipynb  dataset_sample.csv  etl.py  pyproject.toml
etl/tests/: test_etl.py
