[tool.poetry]
name = "api"
version = "0.1.0"
description = "Service API"
authors = ["Raluca Chintoanu"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
flask = ">=3.1.0,<4.0.0"
flasgger = ">=0.9.7.1,<0.10.0.0"
pymongo = ">=4.11.3,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
