[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL Service"
authors = ["Raluca Chintoanu"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
pymongo = ">=4.11.3,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
